2009-06-28  Larry Ewing  <lewing@novell.com>

	* xaml.cpp (value_from_str_with_parser): allow NAN to be NAN too.

2009-06-27  Jeffrey Stedfast  <fejj@novell.com>

	* glyphs.cpp (OnPropertyChanged): When the FontUriProperty
	changes, the layout *always* gets dirty. We also always need to
	invalidate.

	* fonts.cpp (TextFont::UpdateFaceExtents): New helper method to
	calculate/update the font extents. Only use the extents of the
	first face - this fixes a bunch of MS DRTs.
	(TextFont::.ctor): Call UpdateFaceExtents().
	(TextFont::SetSize): Need to call UpdateFaceExtents() here. Fixes
	a number of regressions (like MS DRT #43).

2009-06-27  Chris Toshok  <toshok@ximian.com>

	* grid.cpp (Grid::OnCollectionItemChanged): don't
	InvalidateMeasure() when the grid's actualwidth or row's
	actualheight is set.  this gets us into an infinite loop.

2009-06-26  Chris Toshok  <toshok@ximian.com>

	* enums.cpp (grid_unit_type_map): add a mapping for GridUnitType.
	(initialize_enums): and add it to the hashtable.

	* grid.h|cpp: make ColumnDefinition.ActualWidth and
	RowDefinition.ActualHeight dependencyproperties to make the plugin
	binding easier.  get rid of each class's "actual" field.
	
2009-06-25  Chris Toshok  <toshok@ximian.com>

	* xaml.h|cpp (xaml_is_valid_event_name): pass in the type of the
	object we're looking the event up on, and a flag as to whether or
	not to allow desktop-specific events.  and just look up the event
	from the type system instead of having the hardcoded list.

2009-06-25  Chris Toshok  <toshok@ximian.com>

	* xaml.h|cpp (xaml_is_valid_event_name): pass in the type of the
	object we're looking the event up on, and a flag as to whether or
	not to allow desktop-specific events.  and just look up the event
	from the type system instead of having the hardcoded list.

2009-06-26  Jeffrey Stedfast  <fejj@novell.com>

	* fonts.cpp (LoadPortableUserInterface): Only set that we've
	loaded PUI, not each individual fallback face. The other faces may