@@ -30,11 +30,11 @@ named_colors_t named_colors [] = {
 	// NOTE: samples shows that XAML supports more than the colors defined in System.Windows.Media.Colors
 	// in fact tests shows that all System.Drawing.Color seems to be available
 	{ "transparent",		0x00FFFFFF },
-	{ "aliceblue",			0xFFF0F8FF },
+	{ "aliceblue",			0xFFF7FBFF },
 	{ "antiquewhite",		0xFFFAEBD7 },
 	{ "aqua",			0xFF00FFFF },
 	{ "aquamarine",			0xFF7FFFD4 },
-	{ "azure",			0xFFF0FFFF },
+	{ "azure",			0xFFF7FFFF },
 	{ "beige",			0xFFF5F5DC },
 	{ "bisque",			0xFFFFE4C4 },
 	{ "black",			0xFF000000 },
@@ -73,7 +73,7 @@ named_colors_t named_colors [] = {
 	{ "dimgray",			0xFF696969 },
 	{ "dodgerblue",			0xFF1E90FF },
 	{ "firebrick",			0xFFB22222 },
-	{ "floralwhite",		0xFFFFFAF0 },
+	{ "floralwhite",		0xFFFFFBF7 },
 	{ "forestgreen",		0xFF228B22 },
 	{ "fuchsia",			0xFFFF00FF },
 	{ "gainsboro",			0xFFDCDCDC },
@@ -87,7 +87,7 @@ named_colors_t named_colors [] = {
 	{ "hotpink",			0xFFFF69B4 },
 	{ "indianred",			0xFFCD5C5C },
 	{ "indigo",			0xFF4B0082 },
-	{ "ivory",			0xFFFFFFF0 },
+	{ "ivory",			0xFFFFFFF7 },
 	{ "khaki",			0xFFF0E68C },
 	{ "lavender",			0xFFE6E6FA },
 	{ "lavenderblush",		0xFFFFF0F5 },
@@ -121,7 +121,7 @@ named_colors_t named_colors [] = {
 	{ "mediumturquoise",		0xFF48D1CC },
 	{ "mediumvioletred",		0xFFC71585 },
 	{ "midnightblue",		0xFF191970 },
-	{ "mintcream",			0xFFF5FFFA },
+	{ "mintcream",			0xFFF7FFFF },
 	{ "mistyrose",			0xFFFFE4E1 },
 	{ "moccasin",			0xFFFFE4B5 },
 	{ "navajowhite",		0xFFFFDEAD },
