@@ -1,3 +1,8 @@
+2009-06-28  Chris Toshok  <toshok@ximian.com>
+
+	* color.cpp (named_colors): update these so that text-colors.xaml
+	passes.
+
 2009-06-28  Larry Ewing  <lewing@novell.com>
 
 	* xaml.cpp (value_from_str_with_parser): allow NAN to be NAN too.
